--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:26510599933:ios:6eb34bea931956acad0094",
-  "FIREBASE_PROJECT_ID": "cmsc23-c5l-ajhao",
-  "GCM_SENDER_ID": "26510599933"
+  "GOOGLE_APP_ID": "1:824832350131:ios:0e220ca3d2570027d5ddc6",
+  "FIREBASE_PROJECT_ID": "cmsc23-todo-app-sclee4",
+  "GCM_SENDER_ID": "824832350131"
 }
